--- a/royeyal.studio.css
+++ b/royeyal.studio.css
@@ -127,7 +127,7 @@ a:hover .img-shadow {
 	filter: drop-shadow(5px 5px 5px var(--color--toggle-bg));
 }
 
-/*** portfolio ***/
+/*** Portfolio Grid ***/
 .grid-item-image-wrapper {
 	box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11), 0 5px 15px 0 rgba(0, 0, 0, 0.08);
 	will-change: transform;
@@ -137,10 +137,12 @@ a:hover .img-shadow {
 	box-shadow: 0 16px 35px 0 rgba(0, 0, 0, 0.27), 0 8px 20px 0 rgba(0, 0, 0, 0.15);
 }
 
-  .mf-cursor::before {
-    background: var(--swatch--brand-01);
-    transform:scale(0.7);
-  }
-  .mf-cursor-text {
-    font-weight: bold;
-  }
+/*** Custom Cursor ***/
+.mf-cursor::before {
+	background: var(--swatch--brand-01);
+	transform: scale(0.7);
+}
+
+.mf-cursor-text {
+	font-weight: bold;
+}
