--- a/royeyal.studio.css
+++ b/royeyal.studio.css
@@ -6,6 +6,17 @@
 	font-family: "SF Mono", SFMono-Regular, ui-monospace,
 		"DejaVu Sans Mono", Menlo, Consolas, monospace;
 	margin-bottom: 1rem;
+	font-size: 1rem;
+}
+
+code,
+kbd,
+pre,
+samp {
+	font-family: ui-monospace, Menlo, Monaco, "Cascadia Mono",
+		"Segoe UI Mono", "Roboto Mono", "Oxygen Mono",
+		"Ubuntu Monospace", "Source Code Pro", "Fira Mono",
+		"Droid Sans Mono", "Courier New", monospace;
 }
 
 .w-code-block code {
@@ -33,6 +44,14 @@
 
 .w-richtext h2 {
 	margin-top: 1rem;
+	background-image: linear-gradient(135deg,
+			var(--swatch--brand-02) 10%,
+			#750de0 50%,
+			var(--swatch--brand-01) 85%);
+	-webkit-text-fill-color: transparent;
+	-webkit-background-clip: text;
+	background-clip: text;
+	display: inline-block;
 }
 
 pre code::before {
@@ -43,6 +62,9 @@ pre code::before {
 	margin-bottom: 2rem;
 }
 
+/* *********** */
+/* Main Site */
+/* *********** */
 ::selection {
 	background-color: var(--swatch--brand-01);
 	color: var(--color--text-alt);
