--- a/royeyal.studio.css
+++ b/royeyal.studio.css
@@ -7,7 +7,7 @@
 	border-radius: 9px;
 	font-family: "SF Mono", SFMono-Regular, ui-monospace,
 		"DejaVu Sans Mono", Menlo, Consolas, monospace;
-	margin-bottom: 1rem;
+	margin: 1rem 0;
 	font-size: 1rem;
 }
 
