--- a/royeyal.studio.css
+++ b/royeyal.studio.css
@@ -65,7 +65,7 @@ pre code::before {
 }
 
 /****************/
-/** Main Site **/
+/** Selection **/
 /**************/
 ::selection {
 	background-color: var(--swatch--brand-01);
@@ -74,6 +74,9 @@ pre code::before {
 	text-fill-color: var(--color--text-alt);
 }
 
+/****************/
+/** P3 colors **/
+/**************/
 @supports (color: color(display-p3 1 1 1 / 1)) {
 	:root {
 		--swatch--brand-01: color(display-p3 1 0 0.746);
@@ -81,7 +84,9 @@ pre code::before {
 	}
 }
 
-/* Dark Mode */
+/****************/
+/** Dark Mode **/
+/**************/
 .dark-mode .toggle_inner {
 	background-image: url('https://uploads-ssl.webflow.com/62af866a9b6a1e09cf0c89b1/6574c5cc575373ec2f5d7ee5_moon-black.svg');
 }
@@ -90,9 +95,15 @@ pre code::before {
 	filter: invert(1);
 }
 
-/* Custom Cursor */
+/*********************/
+/** Mouse Follower **/
+/*******************/
 .mf-cursor-text {
 	color: var(--color--text-alt);
+}
+.mf-cursor::before {
+	box-shadow: 0 12px 16px -6px var(--swatch--brand-hover);
+    border: 2px solid var(--swatch--brand-01);
 }
 
 /******************/
