--- a/royeyal.studio.css
+++ b/royeyal.studio.css
@@ -121,10 +121,10 @@ figcaption {
 	display: inline-block;
 }
 
-.w-richtext p a {
+.w-richtext p > a {
 	position: relative;
 }
-.w-richtext p a::after {
+.w-richtext p > a::after {
 	background-color: var(--swatch--brand-01, #f900b9);
     bottom: 0;
     content: '';
@@ -136,7 +136,7 @@ figcaption {
     transition: transform .25s ease-out;
     width: 100%;
 }
-.w-richtext p a:hover::after {
+.w-richtext p > a:hover::after {
 	transform: scaleX(1);
 	transform-origin: bottom left;
   }
