--- a/royeyal.studio.css
+++ b/royeyal.studio.css
@@ -102,6 +102,7 @@ figcaption {
 
 .w-richtext figure.w-richtext-align-center {
 	margin: 3rem auto;
+	max-width: 100%;
 }
 
 .w-richtext figure img {
