--- a/royeyal.studio.css
+++ b/royeyal.studio.css
@@ -1,3 +1,15 @@
+.portfolio_content .portfolio_item-link .icon-decoration {
+	transition: .4s ease-in-out transform;
+}
+.portfolio_content .portfolio_item-link:hover .icon-decoration {
+	transform: translate(.75rem, -.75rem);
+}
+
+.portfolio_list.w-row::before,
+.portfolio_list.w-row::after {
+	content: initial;
+}
+
 /******************/
 /** Code Blocks **/
 /****************/
